[Bug #164927648] Remove extra white space
 Remove extra white space

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -17,6 +17,7 @@
   --limeColor: lime;
 }
 body{
+  position: fixed;
   overflow-x: hidden;
 }
 html, body{
